--- a/Labs/Lab2/lab2/src/app/notes/notes.component.html
+++ b/Labs/Lab2/lab2/src/app/notes/notes.component.html
@@ -10,8 +10,8 @@
   <!--</li>-->
 <!--</ul>-->
 
-<ul>
-  <li *ngFor="let note of notes; let i=index">
-    {{note.text}} <button (click)="remove(i)">remove</button>
-  </li>
-</ul>
+<!--<ul>-->
+  <!--<li *ngFor="let note of notes; let i=index">-->
+    <!--{{note.text}} <button (click)="remove(i)">remove</button>-->
+  <!--</li>-->
+<!--</ul>-->
