--- a/Labs/Lab7/lab7/src/app/sections/sections.component.html
+++ b/Labs/Lab7/lab7/src/app/sections/sections.component.html
@@ -1,8 +1,8 @@
 <p>
   sections works!
 </p>
-<!--<li *ngFor="let section of sections"-->
-    <!--[ngClass]="{active:section.title==activeSection }"-->
-    <!--(click)="showSection(section)" class="list-group-item">-->
-  <!--{{section.title}}-->
-<!--</li>-->
+<li *ngFor="let section of sections"
+    [ngClass]="{active:section.title==activeSection }"
+    (click)="showSection(section)" class="list-group-item">
+  {{section.title}}
+</li>
